@@ -1,22 +1,12 @@
 package vnu.uet.volunteer_hub.volunteer_hub_backend.service.impl;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.Map;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-
 import org.springframework.data.redis.core.ZSetOperations.TypedTuple;
-
+import org.springframework.stereotype.Service;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.dto.request.CreatePostRequest;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.dto.request.UpdatePostRequest;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.dto.response.AuthorSummaryDTO;
@@ -25,18 +15,28 @@ import vnu.uet.volunteer_hub.volunteer_hub_backend.dto.response.PostDetailRespon
 import vnu.uet.volunteer_hub.volunteer_hub_backend.dto.response.ScoredPostDTO;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.entity.Event;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.entity.Post;
+import vnu.uet.volunteer_hub.volunteer_hub_backend.entity.PostReaction;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.entity.User;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.model.enums.EventApprovalStatus;
-import vnu.uet.volunteer_hub.volunteer_hub_backend.repository.EventRepository;
-import vnu.uet.volunteer_hub.volunteer_hub_backend.repository.PostRepository;
-import vnu.uet.volunteer_hub.volunteer_hub_backend.repository.PostReactionRepository;
-import vnu.uet.volunteer_hub.volunteer_hub_backend.repository.RegistrationRepository;
-import vnu.uet.volunteer_hub.volunteer_hub_backend.repository.UserRepository;
+import vnu.uet.volunteer_hub.volunteer_hub_backend.model.enums.ReactionType;
+import vnu.uet.volunteer_hub.volunteer_hub_backend.model.enums.RegistrationStatus;
+import vnu.uet.volunteer_hub.volunteer_hub_backend.repository.*;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.service.PostRankingService;
+import vnu.uet.volunteer_hub.volunteer_hub_backend.service.PostReactionService;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.service.PostService;
 import vnu.uet.volunteer_hub.volunteer_hub_backend.service.ScoringService;
 
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
 @Service
+// @RequiredArgsConstructor
 public class PostServiceImpl implements PostService {
 
     private final PostRepository postRepository;
@@ -46,12 +46,16 @@ public class PostServiceImpl implements PostService {
     private final UserRepository userRepository;
     private final EventRepository eventRepository;
     private final PostReactionRepository postReactionRepository;
+    private final PostReactionService postReactionService;
+    private final CommentRepository commentRepository;
     private final int candidateMultiplier;
 
     public PostServiceImpl(PostRepository postRepository, PostRankingService postRankingService,
             ScoringService scoringService, RegistrationRepository registrationRepository,
             UserRepository userRepository, EventRepository eventRepository,
             PostReactionRepository postReactionRepository,
+            PostReactionService postReactionService,
+            CommentRepository commentRepository,
             @Value("${posts.feed.candidate-multiplier:5}") int candidateMultiplier) {
         this.postRepository = postRepository;
         this.postRankingService = postRankingService;
@@ -60,6 +64,8 @@ public class PostServiceImpl implements PostService {
         this.userRepository = userRepository;
         this.eventRepository = eventRepository;
         this.postReactionRepository = postReactionRepository;
+        this.postReactionService = postReactionService;
+        this.commentRepository = commentRepository;
         this.candidateMultiplier = candidateMultiplier;
     }
 
@@ -91,10 +97,14 @@ public class PostServiceImpl implements PostService {
             List<UUID> uuids = ids.stream().map(UUID::fromString).collect(Collectors.toList());
             List<Post> posts = postRepository.findAllWithAuthorAndEventByIdIn(uuids);
             // preserve order
-            var byId = posts.stream().collect(Collectors.toMap(p -> p.getId().toString(), p -> p));
+            Map<String, Post> byId = posts.stream()
+                    .collect(Collectors.toMap(p -> p.getId().toString(), p -> p));
             List<ScoredPostDTO> dtos = new ArrayList<>();
             Map<String, Double> scoreMap = tuples.stream()
-                    .collect(Collectors.toMap(TypedTuple::getValue, TypedTuple::getScore));
+                    .collect(Collectors.toMap(TypedTuple::getValue, t -> {
+                        Double score = t.getScore();
+                        return score == null ? 0.0 : score;
+                    }));
             for (String id : ids) {
                 Post p = byId.get(id);
                 if (p != null) {
@@ -124,8 +134,28 @@ public class PostServiceImpl implements PostService {
                     .collect(Collectors.toList());
             List<Post> posts = postRepository.findAllWithAuthorAndEventByIdIn(uuids);
 
-            // filter by visibility
-            List<Post> visible = posts.stream().filter(p -> isVisibleToUser(p, viewerId)).toList();
+            // Batch fetch registrations to fix N+1 problem
+            // Collect all event IDs from posts that have events
+            List<UUID> eventIds = posts.stream()
+                    .filter(p -> p.getEvent() != null)
+                    .map(p -> p.getEvent().getId())
+                    .distinct()
+                    .collect(Collectors.toList());
+
+            // Fetch all registrations for these events in ONE query
+            Map<UUID, Set<RegistrationStatus>> userRegistrationsByEventId = registrationRepository
+                    .findByEventIdInAndVolunteerId(eventIds, viewerId)
+                    .stream()
+                    .collect(Collectors.groupingBy(
+                            reg -> reg.getEvent().getId(),
+                            Collectors.mapping(
+                                    reg -> reg.getRegistrationStatus(),
+                                    Collectors.toSet())));
+
+            // filter by visibility using batch-fetched registrations
+            List<Post> visible = posts.stream()
+                    .filter(p -> isVisibleToUserWithCache(p, viewerId, userRegistrationsByEventId))
+                    .toList();
 
             // compute personalized score for each
             List<ScoredPostDTO> personalized = visible.stream().map(p -> {
@@ -150,13 +180,48 @@ public class PostServiceImpl implements PostService {
     private boolean isVisibleToUser(Post p, UUID viewerId) {
         if (p.getEvent() == null)
             return true;
-        var ev = p.getEvent();
+        Event ev = p.getEvent();
         if (ev.getAdminApprovalStatus() != null
                 && ev.getAdminApprovalStatus().name().equalsIgnoreCase("APPROVED"))
             return true;
         if (p.getAuthor() != null && p.getAuthor().getId() != null && p.getAuthor().getId().equals(viewerId))
             return true;
-        return registrationRepository.existsByEventIdAndVolunteerId(p.getEvent().getId(), viewerId);
+        return registrationRepository.findByEventIdAndVolunteerId(p.getEvent().getId(), viewerId)
+                .filter(reg -> reg.getRegistrationStatus().equals(RegistrationStatus.APPROVED)
+                        || reg.getRegistrationStatus().equals(RegistrationStatus.CHECKED_IN)
+                        || reg.getRegistrationStatus().equals(RegistrationStatus.COMPLETED))
+                .isPresent();
+    }
+
+    /**
+     * Optimized visibility check using pre-fetched registrations map.
+     * Fixes N+1 problem by avoiding individual DB queries per post.
+     * 
+     * @param p                      Post to check
+     * @param viewerId               Viewer's user ID
+     * @param registrationsByEventId Pre-fetched map of eventId -> Set of
+     *                               RegistrationStatus
+     * @return true if post is visible to user
+     */
+    private boolean isVisibleToUserWithCache(Post p, UUID viewerId,
+            Map<UUID, Set<RegistrationStatus>> registrationsByEventId) {
+        if (p.getEvent() == null)
+            return true;
+        Event ev = p.getEvent();
+        if (ev.getAdminApprovalStatus() != null
+                && ev.getAdminApprovalStatus().name().equalsIgnoreCase("APPROVED"))
+            return true;
+        if (p.getAuthor() != null && p.getAuthor().getId() != null && p.getAuthor().getId().equals(viewerId))
+            return true;
+
+        // Use pre-fetched registrations instead of querying DB
+        Set<RegistrationStatus> statuses = registrationsByEventId.get(p.getEvent().getId());
+        if (statuses == null) {
+            return false;
+        }
+        return statuses.contains(RegistrationStatus.APPROVED)
+                || statuses.contains(RegistrationStatus.CHECKED_IN)
+                || statuses.contains(RegistrationStatus.COMPLETED);
     }
 
     private ScoredPostDTO mapToDTO(Post p, Double totalScoreOverride, Optional<User> viewer) {
@@ -166,7 +231,8 @@ public class PostServiceImpl implements PostService {
         int commentCount = p.getCommentCount();
         int reactionCount = p.getReactionCount();
 
-        var dto = ScoredPostDTO.builder().postId(p.getId()).eventId(p.getEvent() == null ? null : p.getEvent().getId())
+        ScoredPostDTO dto = ScoredPostDTO.builder().postId(p.getId())
+                .eventId(p.getEvent() == null ? null : p.getEvent().getId())
                 .eventTitle(p.getEvent() == null ? "" : p.getEvent().getTitle())
                 .authorName(p.getAuthor() == null ? "" : p.getAuthor().getName()).content(p.getContent())
                 .createdAt(p.getCreatedAt()).commentCount(commentCount).reactionCount(reactionCount)
@@ -233,11 +299,18 @@ public class PostServiceImpl implements PostService {
         // Count reactions
         int reactionCount = postReactionRepository.countByPostId(postId);
 
-        // Check if liked by viewer
+        // Check if liked by viewer and get reaction type
         boolean isLikedByViewer = false;
+        ReactionType viewerReactionType = null;
         if (viewerId != null) {
-            isLikedByViewer = postReactionRepository.existsByPostIdAndUserId(postId, viewerId);
+            Optional<PostReaction> existingOpt = postReactionRepository.findByPostIdAndUserId(postId,
+                    viewerId);
+            isLikedByViewer = existingOpt.isPresent();
+            viewerReactionType = existingOpt.map(PostReaction::getReactionType).orElse(null);
         }
+
+        // Count comments
+        int commentCount = (int) commentRepository.countByPostId(postId);
 
         // Build response
         PostDetailResponse response = PostDetailResponse.builder()
@@ -247,8 +320,10 @@ public class PostServiceImpl implements PostService {
                 .content(post.getContent())
                 .createdAt(post.getCreatedAt())
                 .updatedAt(post.getUpdatedAt())
+                .commentCount(commentCount)
                 .reactionCount(reactionCount)
                 .isLikedByViewer(isLikedByViewer)
+                .viewerReactionType(viewerReactionType)
                 .build();
 
         // Add author info
@@ -271,16 +346,59 @@ public class PostServiceImpl implements PostService {
         return response;
     }
 
+    @Override
+    public PostDetailResponse likePost(UUID postId, UUID viewerId, ReactionType reactionType) {
+        // validate post
+        Post post = postRepository.findByIdWithAuthorAndEvent(postId);
+        if (post == null) {
+            throw new RuntimeException("Post not found");
+        }
+
+        // Check visibility: viewer must be able to see the post
+        if (viewerId != null && !isVisibleToUser(post, viewerId)) {
+            throw new RuntimeException("Post not visible to user");
+        }
+
+        // validate viewer
+        if (viewerId == null) {
+            throw new RuntimeException("User not found");
+        }
+        User viewer = userRepository.findById(viewerId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        Optional<PostReaction> existingOpt = postReactionRepository.findByPostIdAndUserId(postId, viewerId);
+        if (existingOpt.isPresent()) {
+            PostReaction existing = existingOpt.get();
+            if (existing.getReactionType() == reactionType) {
+                // Toggle: Remove reaction if same type (ấn lại để unlike)
+                postReactionService.removeReaction(existing.getId());
+            } else {
+                // Update reaction type if different
+                existing.setReactionType(reactionType);
+                postReactionService.addReaction(existing);
+            }
+        } else {
+            // Add new reaction if not present
+            PostReaction reaction = new PostReaction();
+            reaction.setPost(post);
+            reaction.setUser(viewer);
+            reaction.setReactionType(reactionType);
+            postReactionService.addReaction(reaction);
+        }
+
+        return getPostDetail(postId, viewerId);
+    }
+
     /**
      * Update a post by ID.
-     * 
+     * <p>
      * TODO (Future):
      * - Add authorization check: verify requester is the author or admin
      * - Add audit logging for tracking changes
      * - Consider adding optimistic locking with @Version
      */
     @Override
-    public ScoredPostDTO updatePost(UUID postId, UpdatePostRequest request) {
+    public ScoredPostDTO updatePost(UUID postId, UpdatePostRequest request, UUID authorId) {
         // Find the post
         Post post = postRepository.findByIdWithAuthorAndEvent(postId);
         if (post == null) {
@@ -288,9 +406,9 @@ public class PostServiceImpl implements PostService {
         }
 
         // TODO (Future): Check authorization
-        // if (!post.getAuthor().getId().equals(requesterId) && !isAdmin(requesterId)) {
-        // throw new RuntimeException("Not authorized to update this post");
-        // }
+        if (!post.getAuthor().getId().equals(authorId)) {
+            throw new RuntimeException("Not authorized to update this post");
+        }
 
         // Update content
         post.setContent(request.getContent());
@@ -308,7 +426,7 @@ public class PostServiceImpl implements PostService {
 
     /**
      * Delete a post by ID.
-     * 
+     * <p>
      * TODO (Future):
      * - Add authorization check: verify requester is the author or admin
      * - Consider soft delete (add deletedAt field) instead of hard delete
@@ -316,15 +434,15 @@ public class PostServiceImpl implements PostService {
      * - Add audit logging
      */
     @Override
-    public void deletePost(UUID postId) {
+    public void deletePost(UUID postId, UUID authorId) {
         // Check if post exists
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new RuntimeException("Post not found with id: " + postId));
 
         // TODO (Future): Check authorization
-        // if (!post.getAuthor().getId().equals(requesterId) && !isAdmin(requesterId)) {
-        // throw new RuntimeException("Not authorized to delete this post");
-        // }
+        if (!post.getAuthor().getId().equals(authorId)) {
+            throw new RuntimeException("Not authorized to delete this post");
+        }
 
         // Remove from ranking (Redis ZSET)
         try {
@@ -340,7 +458,7 @@ public class PostServiceImpl implements PostService {
 
     /**
      * Get posts by a specific user.
-     * 
+     * <p>
      * TODO (Future):
      * - Add visibility filtering: only return posts that viewer can see
      * - Add sorting options (by date, by score)
